--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <heder>
-    <h1>CS 3-4 Reference</h1>
+    <h1>CS 3-4 Reference Tweeker</h1>
   </heder>
   <main>
     <section>
