--- a/6.2-dom.html
+++ b/6.2-dom.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>6.2 Document Object Model (DOM)</title>
+  <title>6.2 Document Object Model</title>
 </head>
 
 <body>
-  <h1>6.2 Document Object Model (DOM)</h1>
+  <h1>6.2 Document Object Model</h1>
   <main>
     <section>
 
