--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
     <section>
       <h2>Unit 6</h2>
       <ul>
-        <li><a href="6.1-js-objects.html">6.1 JS Objects</a></li>
+        <li><a href="6.1-js-objects.html">6.1 Objects Intro</a></li>
+        <li><a href="61-object-intro">6.1 JS Object</a></li>
         <li><a href="6.2-dom.html">6.2 DOM</a></li>
         <li><a href="6.4-functions-with-mutiple-params.html">6.4 Functions with Multiple Params</a></li>
+        <li><a href="6.4-mult-param-functions.js"></a></li>
         <li><a href="6.5-functions-and-return-values.html">6.5 Functions and Return Values</a></li>
         <li><a href="6.6-functions-practice.html">6.6 Functions Practice</a></li>
         <li><a href="6.7-scope.html">6.7 Scope</a></li>
       </ul>
+    </section>
+    <section>
+      <h2>Unit 7 - Arrays and Lists</h2>
+      <li><a href="7.1-arrays-intro.html"></a>7.1 Arrays Intro</li>
     </section>
   </main>
 </body>
