--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <section>
       <h2>Unit 7 - Arrays and Lists</h2>
       <ul>
-        <li><a href="7.1-arrays-intro.html"></a>7.1 Arrays Intro</li>
-        <li><a href="7.2-arrays-push-pop.html"></a>7.2 Arrays Push Pop</li>
+        <li><a href="7.1-arrays-intro.html">7.1 Intro to Arrayas and Lists</a></li>
+        <li><a href="7.2-arrays-push-pop.html">7.2 Arrays Push Pop</a></li>
         <li><a href="7.3-array-for-loops.html">7.3 Iterating through loops</a></li>
         <li><a href="7.5-search-algorithms.html">7.5 Search Algorithms</a></li>
       </ul>
